cloud section added

--- a/cloud.html
+++ b/cloud.html
@@ -31,7 +31,8 @@
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <!-- <link href="css/contact.css" rel='stylesheet' type='text/css' /> -->
   <link rel="stylesheet" href="css/instalaciones.css" />
-  <link rel="stylesheet" href="css/comunicaciones.css" />
+  <link rel="stylesheet" href="css/cloud.css" />
+  <!-- <link rel="stylesheet" href="css/comunicaciones.css" /> -->
   <!-- <link href="css/fontawesome-all.css" rel="stylesheet" /> -->
   <link href="css/all.min.css" rel="stylesheet" />
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet" />
@@ -102,37 +103,22 @@
   <!-- //mian-content-->
 
   <!--/ Nubes -->
-  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
+  <section class="banner-bottom py-lg-5 py-md-5 py-5" id="services">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
-        <h3 class="tittle text-center mb-md-5 mb-4">Cloud</h3>
+        <h3 class="tittle text-center mb-md-5 mb-4">Servicios administrados en la Nube</h3>
         <!-- 3 card section -->
         <div class="row middle-grids pt-lg-5">
           <div class="col-lg-4 about-in middle-grid-info text-center">
             <div class="card">
               <div class="card-body">
-                <i class="fas fa-lock mb-2"></i>
-                <h5 class="card-title text-uppercase my-3">Private</h5>
-                <p class="card-text">
-                  Para satisfacer sus necesidades somos integradores de
-                  sistemas y equipos de marcas reconocidas en el mercado como:
-                  Zigor, Liebert, Notifier, Cisco, APC, SYSTIMAX, Avaya,
-                  Ortronics, Panduit, AMP, entre otros.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 about-in middle-grid-info text-center">
-            <div class="card">
-              <div class="card-body">
                 <i class="fas fa-globe mb-2"></i>
-                <h5 class="card-title text-uppercase my-3">Public</h5>
+                <h5 class="card-title text-uppercase my-3">Publica</h5>
                 <p class="card-text">
-                  Somos una empresa de servicio que brinda a nuestros clientes
-                  soluciones integrales consistentes en estudios de
-                  factibilidad, asesoría, diseño y construcción de centros de
-                  cómputo y telecomunicaciones. Suministramos bajo la
-                  modalidad "LLAVE EN MANO".
+                  Con el respaldo de empresas líderes a nivel mundial te
+                  ayudamos a que tus aplicaciones tengan mejor rendimiento,
+                  respondiendo de manera ágil a los cambios de necesidades
+                  de tu negocio.
                 </p>
               </div>
             </div>
@@ -141,12 +127,24 @@
             <div class="card">
               <div class="card-body">
                 <i class="fas fa-cloud mb-2"></i>
-                <h5 class="card-title text-uppercase my-3">Hybrid</h5>
+                <h5 class="card-title text-uppercase my-3">Hibrida</h5>
                 <p class="card-text">
-                  Contamos con 14 recursos técnicos directos en Monterrey
-                  altamente calificados para prestar nuestros servicios desde
-                  la concepción de la solución hasta el mantenimiento
-                  preventivo y correctivo 24 horas.
+                  Soluciona tus problemas de expansión o complementa
+                  tu infraestructura actual con soluciones y
+                  servicios en la nube.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-cloud fa-lock mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">Privada</h5>
+                <p class="card-text">
+                  Infraestructura y servicios privados, dedicados,
+                  seguros, y a la medida de tus proyectos y negocio,
+                  gestionado por nuestro equipo especializado y certificado.
                 </p>
               </div>
             </div>
@@ -157,156 +155,129 @@
   </section>
 
   <hr />
-  <!-- //Nubes-->
+  <!-- // Nubes-->
 
-  <!-- /Productos-->
-  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
+  <!-- / Soluciones Servicios y Ventajas-->
+
+  <section class="banner-bottom py-lg-1 py-md-1 py-3" id="services">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
-        <h3 class="tittle text-center mb-md-5 mb-4">Servicios Administrados de IT</h3>
+        <!-- <h3 class="tittle text-center mb-md-5 mb-4">Servicios Administrados</h3> -->
+
+        <!-- Soluciones -->
         <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-6 advantage-grid-info pt-md-5">
+          <div class="col-lg-8 advantage-grid-info pt-md-5">
             <div class="advantage_left">
-              <h4 class="mb-2">Instancias Windows y Linux</h4>
-              <h3>Computo</h3>
-              <ul class="instalaciones-servicios-ul ml-4 mt-2">
-                <li>Batch Services</li>
-                <li>Kubernetes y Contenedores</li>
-                <li>Auto Scaling</li>
-                <li>Serverless Computing</li>
-              </ul>
+              <!-- <h4 class="mb-2">CAMBIAR ESTO</h4> -->
+              <h3 class="mb-2">Soluciones</h3>
+              <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
+                at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
+                in, egestas vestibulum tellus.</p> -->
+              <div class="row ml-2">
+                <div class="col-lg-6">
+                  <ul class="instalaciones-servicios-ul">
+                    <li>Disaster Recovery Plan (DRP)</li>
+                    <li>Ambientes certificados para ERPs (SAP)</li>
+                    <li>Almacenamiento / storage</li>
+                    <li>Ambientes Linux y Windows Dev/QA</li>
+                    <li>Ambientes físicos y virtuales (VMware)</li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul class="instalaciones-servicios-ul">
+                    <li>Replica y alta disponibiliad de DBs</li>
+                    <li>SQL, DB2, Oracle, MongoDB, PostgreSQL</li>
+                    <li>Balanceo de cargas hibridas</li>
+                    <li>Backups, Cintas, DRaaS, BaaS</li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col-lg-6 advantage-grid-info1">
-            <div class="comunicaciones text-center">
-              <img
-                src="https://lh3.googleusercontent.com/S5vdUqgjF7I-xW23Wm4u3d24enArTzNzff0uTsYIXvbjQwBLM-1a7Ocb6IvsSBRPGM3685StI5F4yyMKnWkXQ9IeKdP1o1otXXv3KhjoTUfW940Zhtgp3Yz44jfERJbMOVE3KqXRXBE=w2400"
-                class="img-fluid" alt="" />
+          <div class="col-lg-4 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="images/soluciones.jpeg" class="img-fluid" alt="soluciones" />
             </div>
           </div>
         </div>
+        <!-- Soluciones -->
+
+        <!-- Servicios -->
         <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-6 advantage-grid-info1">
-            <div class="comunicaciones text-center">
-              <img
-                src="https://lh3.googleusercontent.com/ksYLy9sPDmG7YMt1LNUgoBEkyOuDa_J6mesm4k7mzydvfc-cZhnSNlmTbQrRNPH9BUV-8mZeLjrKS8VmojNZUB6sho5HKUWK578UT2dhLnBxlnMS4P9UWTTEQcmu_BE3GWzmwyKJ4LM=w2400"
-                class="img-fluid" alt="" />
+          <div class="col-lg-4 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="images/stephen-dawson-qwtCeJ5cLYs-unsplash.jpg" class="img-fluid" alt="servicios" />
             </div>
           </div>
-          <div class="col-lg-6 advantage-grid-info pt-md-5">
+          <div class="col-lg-8 advantage-grid-info pt-md-5">
             <div class="advantage_left">
-              <h4 class="mb-2">Seguro y siempre disponible</h4>
-              <h3>Storage</h3>
-              <ul class="instalaciones-servicios-ul ml-4 mt-2">
-                <li>Object Storage</li>
-                <li>File System Storage</li>
-                <li>Block Storage</li>
-                <li>Cintas / Backups / Archive</li>
-              </ul>
+              <!-- <h4 class="mb-2">CAMBIAR ESTO</h4> -->
+              <h3 class="mb-2">Servicios</h3>
+              <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
+                at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
+                in, egestas vestibulum tellus.</p> -->
+              <div class="row ml-2">
+                <div class="col-lg-6">
+                  <ul class="instalaciones-servicios-ul">
+                    <li>Arquitectura y diseño</li>
+                    <li>Dimensionamiento</li>
+                    <li>Configuración y puesta a punto</li>
+                    <li>Soporte técnico</li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul class="instalaciones-servicios-ul">
+                    <li>Instalacion y lanzamiento de aplicaciones</li>
+                    <li>Alta disponibilidad</li>
+                    <li>Mejora de rendimiento</li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-6 advantage-grid-info pt-md-5">
+        <!-- Servicios -->
+
+        <!-- Ventajas y Beneficios -->
+        <div class="row middle-grids pt-lg-5 ml-2">
+          <div class="col-lg-8 advantage-grid-info pt-md-5">
             <div class="advantage_left">
-              <h4 class="mb-2">Conectividad</h4>
-              <h3>Network</h3>
-              <ul class="instalaciones-servicios-ul ml-4 mt-2">
-                <li>DNS</li>
-                <li>CDN</li>
-                <li>Load Balancing</li>
-              </ul>
+              <!-- <h4 class="mb-2">CAMBIAR</h4> -->
+              <h3 class="mb-2">Ventajas y Beneficios</h3>
+              <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
+                at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
+                in, egestas vestibulum tellus.</p> -->
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul class="instalaciones-servicios-ul ml-4">
+                    <li>Para solo lo que usas</li>
+                    <li>Servicios administrados</li>
+                    <li>Una factura mensual, baja inversion inicial</li>
+                    <li>Reduccion de costos</li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul class="instalaciones-servicios-ul">
+                    <li>Licenciamiento incluido</li>
+                    <li>Usa la tecnología mas actual</li>
+                    <li>Innova de manera ágil</li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col-lg-6 advantage-grid-info1">
-            <div class="comunicaciones text-center">
-              <img
-                src="https://lh3.googleusercontent.com/bcizaK7vtOs1sRTfSf4wd3Z3pks6f6CF8nc_t7IdWXSzsPeKNTv8gZ8W-OUprOTuHz4eEdrfUhC11vXCjgTAEfRVZZe9Gh1bjFTzgIyJGNeZRPKV6Sda5ZsPsW6hzmMcgb4flGW9tGY=w2400"
-                class="img-fluid" alt="" />
+          <div class="col-lg-4 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="images/Ecosystems-and-Hybrid-Integration.jpg" class="img-fluid" alt="ventajas" />
             </div>
           </div>
         </div>
-        <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-6 advantage-grid-info1">
-            <div class="comunicaciones text-center">
-              <img
-                src="https://lh3.googleusercontent.com/sySzTBgKT3LBYNKriqYcArxHOo0w582n7qZFhOvMGlx6QyihI1d3UUIEP6S51Zn5-1vBtXzKFw6280GLuBv1E3x6W6IurS0_iSk4Ed7eh-ZjrMOp-ZkwqLmcNyLKw1YZdh_nS4YzpYs=w2400"
-                class="img-fluid" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-6 advantage-grid-info pt-md-5">
-            <div class="advantage_left">
-              <h4 class="mb-2">DB Managed Services</h4>
-              <h3>Bases de Datos</h3>
-              <ul class="instalaciones-servicios-ul ml-4 mt-2">
-                <li>Bases de Datos Relacionales</li>
-                <li>Bases de Datos NoSql</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+        <!-- Ventajas y Beneficios  -->
+
       </div>
     </div>
   </section>
-
-  <hr>
-  <!-- //Productos -->
-
-  <!--/ Ventajas -->
-  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
-    <div class="container">
-      <div class="inner-sec py-lg-5 py-3">
-        <h3 class="tittle text-center mb-md-5 mb-4">Cloud</h3>
-        <!-- 3 card section -->
-        <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-4 about-in middle-grid-info text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-lock mb-2"></i>
-                <h5 class="card-title text-uppercase my-3">Private</h5>
-                <p class="card-text">
-                  Para satisfacer sus necesidades somos integradores de
-                  sistemas y equipos de marcas reconocidas en el mercado como:
-                  Zigor, Liebert, Notifier, Cisco, APC, SYSTIMAX, Avaya,
-                  Ortronics, Panduit, AMP, entre otros.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 about-in middle-grid-info text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-globe mb-2"></i>
-                <h5 class="card-title text-uppercase my-3">Public</h5>
-                <p class="card-text">
-                  Somos una empresa de servicio que brinda a nuestros clientes
-                  soluciones integrales consistentes en estudios de
-                  factibilidad, asesoría, diseño y construcción de centros de
-                  cómputo y telecomunicaciones. Suministramos bajo la
-                  modalidad "LLAVE EN MANO".
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 about-in middle-grid-info text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-cloud mb-2"></i>
-                <h5 class="card-title text-uppercase my-3">Hybrid</h5>
-                <p class="card-text">
-                  Contamos con 14 recursos técnicos directos en Monterrey
-                  altamente calificados para prestar nuestros servicios desde
-                  la concepción de la solución hasta el mantenimiento
-                  preventivo y correctivo 24 horas.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- //Ventajas -->
+  <!-- // Soluciones Servicios y Ventajas  -->
 
   <!--/newsletter-->
   <footer class="newsletter_right py-md-5 py-4" id="footer">
