--- a/instalaciones.html
+++ b/instalaciones.html
@@ -163,26 +163,26 @@
           <div class="col-lg-8 advantage-grid-info pt-md-5">
             <div class="advantage_left">
               <h4 class="mb-2">Data Centers</h4>
-              <h3 class="mb-2">Centros de Cómputo.</h3>
+              <h3 class="mb-2">Centros de Cómputo</h3>
               <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                 at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                 in, egestas vestibulum tellus.</p> -->
               <div class="row ml-2">
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
-                    <li>Construcción de Centros de Cómputo.</li>
-                    <li>Cableado Estructurado.</li>
-                    <li>Aire Acondicionado.</li>
-                    <li>UPS's. y Planta de Emergencia.</li>
-                    <li>Seguridad Física y Lógica.</li>
+                    <li>Construcción de Centros de Cómputo</li>
+                    <li>Cableado Estructurado</li>
+                    <li>Aire Acondicionado</li>
+                    <li>UPS's. y Planta de Emergencia</li>
+                    <li>Seguridad Física y Lógica</li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
-                    <li>Controles de Acceso.</li>
-                    <li>Sistema Contra Incendio.</li>
-                    <li>CCTV.</li>
-                    <li>Contratos de Mantenimiento.</li>
+                    <li>Controles de Acceso</li>
+                    <li>Sistema Contra Incendio</li>
+                    <li>CCTV</li>
+                    <li>Contratos de Mantenimiento</li>
                     <li>Servicios de Migración</li>
                   </ul>
                 </div>
@@ -214,21 +214,21 @@
               <div class="row ml-2">
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
-                    <li>Cableado estructurado categorías 5e, 6, 6A.</li>
+                    <li>Cableado estructurado categorías 5e, 6, 6A</li>
                     <li>
-                      Marcas: Systimax, Ortronics, Panduit, entre otros.
+                      Marcas: Systimax, Ortronics, Panduit, entre otros
                     </li>
                     <li>
                       Integración voz, datos, videos y servicios de
-                      automatización de edificios.
+                      automatización de edificios
                     </li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
-                    <li>Garantía de 15 años.</li>
-                    <li>Certificación y Memoria Técnica.</li>
-                    <li>Capacitación y Soporte.</li>
+                    <li>Garantía de 15 años</li>
+                    <li>Certificación y Memoria Técnica</li>
+                    <li>Capacitación y Soporte</li>
                   </ul>
                 </div>
               </div>
@@ -241,24 +241,24 @@
           <div class="col-lg-8 advantage-grid-info pt-md-5">
             <div class="advantage_left">
               <h4 class="mb-2">Data Centers</h4>
-              <h3 class="mb-2">Aire Acondicionado de Precisión.</h3>
+              <h3 class="mb-2">Aire Acondicionado de Precisión</h3>
               <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                 at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                 in, egestas vestibulum tellus.</p> -->
               <div class="row">
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
-                    <li>Venta, Instalación y Mantenimiento.</li>
-                    <li>Cálculo de cargas térmicas.</li>
-                    <li>Análisis de distribución de aire.</li>
-                    <li>Cámara plena.</li>
+                    <li>Venta, Instalación y Mantenimiento</li>
+                    <li>Cálculo de cargas térmicas</li>
+                    <li>Análisis de distribución de aire</li>
+                    <li>Cámara plena</li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
-                    <li>Instalación eléctrica.</li>
-                    <li>Instalación hidráulica.</li>
-                    <li>Mantenimiento Preventivo y Correctivo.</li>
+                    <li>Instalación eléctrica</li>
+                    <li>Instalación hidráulica</li>
+                    <li>Mantenimiento Preventivo y Correctivo</li>
                   </ul>
                 </div>
               </div>
@@ -266,8 +266,7 @@
           </div>
           <div class="col-lg-4 advantage-grid-info1">
             <div class="advantage_left1 text-center">
-              <img src="images/AC.jpg" class="img-fluid" alt="
-              Data-Center1" />
+              <img src="images/AC.jpg" class="img-fluid" alt="refrigeracion piso falso" />
             </div>
           </div>
         </div>
@@ -289,20 +288,20 @@
               <div class="row ml-2">
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
-                    <li>UPS.</li>
+                    <li>UPS</li>
                     <li>Venta de baterías</li>
-                    <li>Planta de Emergencia.</li>
-                    <li>Instalaciones Eléctricas para equipo de cómputo.</li>
+                    <li>Planta de Emergencia</li>
+                    <li>Instalaciones Eléctricas para equipo de cómputo</li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
-                    <li>Estudios de Calidad de Energía.</li>
-                    <li>Estudios de Tierras Físicas.</li>
-                    <li>Póliza de Mantenimiento.</li>
+                    <li>Estudios de Calidad de Energía</li>
+                    <li>Estudios de Tierras Físicas</li>
+                    <li>Póliza de Mantenimiento</li>
                     <li>
                       Marcas: ZIGOR, LIEBERT, MITSUBISHI en plantas
-                      OTTOMOTORES.
+                      OTTOMOTORES
                     </li>
                   </ul>
                 </div>
@@ -323,26 +322,26 @@
               <div class="row ml-2">
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
-                    <li>Sistemas de Control de Acceso.</li>
-                    <li>Circuito Cerrado de Televisión.</li>
+                    <li>Sistemas de Control de Acceso</li>
+                    <li>Circuito Cerrado de Televisión</li>
                     <li>
                       Sistemas de Detección y Extinción de Incendios vía
-                      FM200.
+                      FM200
                     </li>
-                    <li>Sistemas de seguridad comercial y bancaria.</li>
-                    <li>Integración con Seproban.</li>
+                    <li>Sistemas de seguridad comercial y bancaria</li>
+                    <li>Integración con Seproban</li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
                     <li>
                       Integración voz, datos, videos y servicios de
-                      automatización de edificios.
+                      automatización de edificios
                     </li>
                     <li>
-                      Centros de monitoreo de video y central de alarmas.
+                      Centros de monitoreo de video y central de alarmas
                     </li>
-                    <li>Marcas: LENEL, PELCO, NOTIFIER, ARCHNETWORKS.</li>
+                    <li>Marcas: LENEL, PELCO, NOTIFIER, ARCHNETWORKS</li>
                   </ul>
                 </div>
               </div>
@@ -360,7 +359,9 @@
         <div class="row middle-grids pt-lg-5">
           <div class="col-lg-4 advantage-grid-info1">
             <div class="advantage_left1 text-center">
-              <img src="images/SunPanelsMed.jpg" class="img-fluid" alt="circuito eletrico" />
+              <img
+                src="https://lh3.googleusercontent.com/vaXhmkQk6VYneR0xHGBf027eNwpTlJ13HazESQEXC2bca1nAAeVgxQW7BQLMw3yebGCdGLJk-9znSPm_Ulw1YTfR57fsYP_C9JoatSboN50dBDv_OFREAwondiZDRoIXLlgY-Ww824o=w2400"
+                class="img-fluid" alt="paneles solares" />
             </div>
           </div>
           <div class="col-lg-8 advantage-grid-info pt-md-5">
@@ -375,15 +376,15 @@
                   <ul class="instalaciones-servicios-ul">
                     <li>
                       Sistemas Fotovoltaicos Comercial/Industrial con
-                      Interconexión a la Red de CFE.
+                      Interconexión a la Red de CFE
                     </li>
-                    <li>Sistemas Fotovoltaicos Aislados.</li>
+                    <li>Sistemas Fotovoltaicos Aislados</li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="instalaciones-servicios-ul">
-                    <li>Módulos Fotovoltaicos.</li>
-                    <li>Inversores (Monofásicos, Trifásicos e Híbridos).</li>
+                    <li>Módulos Fotovoltaicos</li>
+                    <li>Inversores (Monofásicos, Trifásicos e Híbridos)</li>
                     <li>Baterías Recargables</li>
                   </ul>
                 </div>
